<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_list"
        android:icon="@drawable/baseline_list_24"
        android:title="@string/my_list" />
    <item
        android:id="@+id/nav_following"
        android:icon="@drawable/baseline_remove_red_eye_24"
        android:title="@string/following"/>
    <item
        android:id="@+id/nav_maps"
        android:icon="@drawable/baseline_map_24"
        android:title="@string/maps" />
    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/account" />

</menu>