<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/upcoming_events"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <ImageButton-->
    <!--        android:id="@+id/dashboardToEvent_btn"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/textView"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:srcCompat="@drawable/baseline_arrow_forward_24" />-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_upcomingEvents"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_upcomingEvents" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/event_category"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <Button
            android:id="@+id/btn_eduction"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#68C6DA"
            android:drawableEnd="@drawable/square_academic_cap"
            android:gravity="start|center_vertical"
            android:text="@string/acadamics"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="6dp" />

        <Button
            android:id="@+id/extra_btn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#E87A3D"
            android:gravity="start|center_vertical"
            android:text="@string/extracurricular"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="6dp" />

        <Button
            android:id="@+id/clubs_btn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#EAAB43"
            android:gravity="start|center_vertical"
            android:text="@string/clubs"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="6dp" />

        <Button
            android:id="@+id/charity_btn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:backgroundTint="#F5D0BC"
            android:gravity="start|center_vertical"
            android:text="@string/charity"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="6dp" />
    </LinearLayout>

    <Button
        android:id="@+id/add_event_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/add_new_event"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>